clusters/wrtk8s/home-assistant/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ha.jgarr.net
    external-dns.alpha.kubernetes.io/target: 10.1.1.152
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
  hostnames:
    - ha.jgarr.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8080
