clusters/wrtk8s/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: ha.jgarr.net
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ha.jgarr.net
      secretName: home-assistant-tls
  rules:
    - host: ha.jgarr.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8080
