clusters/wrtk8s/home-assistant/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-tailscale
  namespace: home-assistant
spec:
  ingressClassName: tailscale
  rules:
    - host: home-assistant
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8080
  tls:
    - hosts:
        - home-assistant
